[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/menu/main_menu/scripts/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
margin_right = 512.0
margin_bottom = 288.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 5.0
margin_right = 516.0
margin_bottom = 289.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
margin_right = 516.0
margin_bottom = 284.0
region_rect = Rect2( 384, 22, 1, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 516.0
margin_bottom = 284.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 258.0
margin_right = 258.0
margin_bottom = 284.0
alignment = 1

[node name="Buttons" type="Node2D" parent="MarginContainer/HBoxContainer/VBoxContainer"]
position = Vector2( -42, 76 )

[node name="NewGameButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Buttons"]
margin_right = 82.0
margin_bottom = 20.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueGameButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Buttons"]
margin_top = 24.0
margin_right = 82.0
margin_bottom = 44.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Buttons"]
margin_top = 48.0
margin_right = 82.0
margin_bottom = 68.0
text = "Levels"

[node name="OptionButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Buttons"]
margin_top = 72.0
margin_right = 82.0
margin_bottom = 92.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Buttons"]
margin_top = 96.0
margin_right = 82.0
margin_bottom = 116.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Buttons/ContinueGameButton" to="." method="_on_ContinueGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Buttons/LevelsButton" to="." method="_on_LevelsButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Buttons/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
